--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-19  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation
+
 2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * ms.po: Updated Malay Translation by
