2003-11-19  Manish Singh  <yosh@gimp.org>
        * app/widgets/gimpdnd.c (gimp_dnd_open_files): strstr on dnd_crap,
        not filename, since filename will be NULL in that case. Also remove
        doubled declaration of filename.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11518 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-19  Manish Singh  <yosh@gimp.org>
+
+	* app/widgets/gimpdnd.c (gimp_dnd_open_files): strstr on dnd_crap,
+	not filename, since filename will be NULL in that case. Also remove
+	doubled declaration of filename.
+
 2003-11-19  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_shrink_wrap):
