Include bug number in last commit
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11519 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* app/widgets/gimpdnd.c (gimp_dnd_open_files): strstr on dnd_crap,
 	not filename, since filename will be NULL in that case. Also remove
-	doubled declaration of filename.
+	doubled declaration of filename. Fixes #127424.
 
 2003-11-19  Sven Neumann  <sven@gimp.org>
 
