2003-11-19  Manish Singh  <yosh@gimp.org>
        * app/widgets/gimpdnd.c (gimp_dnd_open_files): Display an error if we
        still can't convert a filename to a valid uri. Further addresses
        #127424.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11520 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-19  Manish Singh  <yosh@gimp.org>
 
+	* app/widgets/gimpdnd.c (gimp_dnd_open_files): Display an error if we
+	still can't convert a filename to a valid uri. Further addresses
+	#127424.
+
+2003-11-19  Manish Singh  <yosh@gimp.org>
+
 	* app/widgets/gimpdnd.c (gimp_dnd_open_files): strstr on dnd_crap,
 	not filename, since filename will be NULL in that case. Also remove
 	doubled declaration of filename. Fixes #127424.
