--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdnd.c: cleanup before doing real changes.
+
 2003-11-19  Manish Singh  <yosh@gimp.org>
 
 	* app/widgets/gimpdnd.c (gimp_dnd_open_files): Display an error if we
