Tell which bug is fixed by the last commit.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11528 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 
 	* app/display/gimpdisplayshell-callbacks.c
 	* app/display/gimpdisplayshell.c: implemented the new behaviour.
+	Fixes bug #109527.
 
 2003-11-20  Michael Natterer  <mitch@gimp.org>
 
