--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-21  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2003-11-10  Sven Neumann  <sven@gimp.org>
 
 	* gimp_tips.fr.txt: removed since there's a french po file now.
