--- a/tips/pt.po
+++ b/tips/pt.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.4\n"
+"Project-Id-Version: 2.6\n"
 "Report-Msgid-Bugs-To: Duarte Loreto <happyguy_pt@hotmail.com>\n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
-"PO-Revision-Date: 2003-09-09 17:40+0100\n"
+"POT-Creation-Date: 2003-11-21 01:11+0000\n"
+"PO-Revision-Date: 2003-11-21 01:20+0100\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -45,11 +45,11 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:5
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
-"Arrastar-<tt>Ctrl</tt> com a ferramenta de Transformação em modo de rotação "
-"irá restringir a rotação a ângulos de 15 graus."
+"Arrastar-<tt>Ctrl</tt> com a ferramenta de Rotação irá restringir a rotação "
+"a ângulos de 15 graus."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -76,13 +76,14 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Após activar \"Atalhos de Teclado Dinâmicos\" no diálogo de Preferências, "
 "pode redefinir teclas de atalho. Para o fazer, faça surgir o menu, "
 "seleccionando um item do menu, e primindo a nova combinação de teclas de "
-"atalho. Isto será gravado quando sair do GIMP."
+"atalho. Se \"Gravar Atalhos de Menu\" estiver activo, os atalhos serão "
+"gravados quando sair do GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -109,14 +110,13 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:11
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Selection), the paint tools can be "
+"used with their current settings. You can use the Paintbrush in gradient "
+"mode or even the Eraser or the Smudge tool."
 msgstr ""
-"Se tiver desenhado um caminho (Editar-&gt;Pincelar), são utilizadas a "
-"ferramenta de desenho e as suas definições actuais. Pode utilizar o Spray em "
-"modo gradiente, a ferramenta de clonagem com um padrão ou mesmo a Borracha "
-"ou a ferramenta de Esborratar."
+"Se tiver desenhado um caminho (Editar-&gt;Selecção Pincelar), as ferramentas "
+"de desenho podem ser utilizadas com as suas definições actuais. Pode utilizar "
+"o Spray em modo gradiente ou mesmo as ferramentas Borracha ou Esborratar."
 
 #: tips/gimp-tips.xml.in.h:12
 msgid ""
@@ -130,11 +130,11 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:13
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "A maioria dos plug-ins funciona na camada actual da imagem actual. Nalguns "
-"casos, terá de juntar todas as camadas (Camadas-&gt;Unificar Camadas) se "
+"casos, terá de juntar todas as camadas (Imagem-&gt;Unificar Imagem) se "
 "desejar que o plug-in funcione para toda a imagem."
 
 #: tips/gimp-tips.xml.in.h:14
@@ -150,13 +150,14 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Nem todos os efeitos podem ser aplicados a todos os tipos de imagens. Isto é "
-"indicado por uma opção de menu cinzenta. Poderá ter de modificar o modo da "
+"indicado por uma opção de menu cinzenta. Poderá ter de alterar o modo da "
 "imagem para RGB (Imagem-&gt;Modo-&gt;RGB), adicionar um canal alfa (Camadas-"
-"&gt;Adicionar Canal Alfa) ou unifica-la (Camadas-&gt;Unificar Imagem)."
+"&gt;Transparência-&gtAdicionar Canal Alfa) ou unifica-la (Imagem-&gt;Unificar "
+"Imagem)."
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -227,17 +228,6 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Utilizar Editar-&gt;Pincelada permite-lhe desenhar quadrados ou círculos "
-"simples pintando a margem da sua selecção actual com o pincel activo. Formas "
-"geométricas mais complexas podem ser desenhadas com Filtros-&gt;Renderizar-"
-"&gt;Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
-msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
 "cursor position. If you also press <tt>Ctrl</tt>, the line will be "
@@ -248,7 +238,7 @@ msgstr ""
 "posição de desenho até à posição actual do cursor. Se também primir o "
 "<tt>Ctrl</tt>, a linha será limitada a ângulos de 15 graus."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -260,11 +250,17 @@ msgstr ""
 "tt>). Isto preserva as camadas e todos os aspectos do seu trabalho-em-curso. "
 "Uma vez completo o projecto, grave-o como JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
-msgstr "Pode ajustar e re-colocar uma selecção com arrastar-<tt>Alt</tt>."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
+msgstr ""
+"Pode ajustar e deslocar uma selecção utilizando arrastar-<tt>Alt</tt>. Se isto "
+"fizer a janela deslocar-se, o seu gestor de janelas já utiliza a tecla <tt>"
+"Alt</tt>. Tente primir <tt>Shift</tt> simultaneamente."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -272,17 +268,17 @@ msgstr ""
 "Pode ajustar o alcance da selecção de uma selecção livre clicando e "
 "arrastando para a esquerda e direita."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
-"Pode criar e editar selecções complexas utilizando a ferramenta de Bezier. O "
+"Pode criar e editar selecções complexas utilizando a ferramenta de Caminho. O "
 "diálogo de Caminhos permite-lhe trabalhar em múltiplos caminhos e converte-"
 "los em selecções."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -290,7 +286,7 @@ msgstr ""
 "Pode arrastar uma camada do diálogo Camadas e larga-la na caixa de "
 "ferramentas. Isto irá criar uma nova imagem contendo apenas aquela camada."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -299,6 +295,17 @@ msgstr ""
 "Pode arrastar e largar muitas coisas no GIMP.  Por exemplo, arrastar uma cor "
 "da caixa de ferramentas ou de uma paleta de cores e larga-la numa imagem irá "
 "encher a imagem actual ou a selecção com essa cor."
+
+#: tips/gimp-tips.xml.in.h:29
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Pode desenhar quadrados ou círculos simples utilizando Editar-&gt;Selecção "
+"Pincelada. Pincela a margem da sua selecção actual. Formas mais complexas "
+"podem ser desenhadas com a ferramenta de Caminhos ou com Filtros-&gt;Renderizar-"
+"&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -365,6 +372,9 @@ msgstr ""
 "botão \"Máscara Rápida\" no canto inferior esquerdo de uma janela de imagem. "
 "Altere a sua selecção pintando a imagem e clique novamente no botão para a "
 "converter novamente numa selecção normal."
+
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#~ msgstr "Pode ajustar e re-colocar uma selecção com arrastar-<tt>Alt</tt>."
 
 #~ msgid ""
 #~ "If your fonts turn out blocky, that's because they're not scalable fonts. "
