2003-11-21  Michael Natterer  <mitch@gimp.org>
	* app/plug-in/plug-ins.c (plug_ins_help_domains): argh, need to
	assign strings to (*array_retloc[i]), not just *array_retloc[i].
	Fixes passing of the list of help domains to the help browser.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11537 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/plug-in/plug-ins.c (plug_ins_help_domains): argh, need to
+	assign strings to (*array_retloc[i]), not just *array_retloc[i].
+	Fixes passing of the list of help domains to the help browser.
+
 2003-11-20  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/gui/preferences-dialog.c
