2003-11-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimptoolbox.c: added #defines for the data keys used
	for g_object_set_data() and _get_data().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11539 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimptoolbox.c: added #defines for the data keys used
+	for g_object_set_data() and _get_data().
+
+2003-11-21  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpwidgets/gimpdialog.c: added a "role" property.
 
 	* app/widgets/gimptexteditor.c
