2003-11-21  Sven Neumann  <sven@gimp.org>
	* configure.in: added a check for little cms.

	* modules/Makefile.am
	* modules/cdisplay_proof.c: added a color proof display filter
	module contributed by Banlu Kemiyatorn <id@project-ile.net>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11541 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: added a check for little cms.
+
+	* modules/Makefile.am
+	* modules/cdisplay_proof.c: added a color proof display filter
+	module contributed by Banlu Kemiyatorn <id@project-ile.net>.
+
 2003-11-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimptoolbox.c: added #defines for the data keys used
