--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added color proof module.
+
 2003-11-20  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
