2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
        * sk.po: Updated Slovak translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11542 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation.
+
 2003-11-18  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
