2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
        * sk.po: Updated Slovak translation by Zdenko Podobny.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11543 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation by Zdenko Podobny.
+
 2003-11-20  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
