2003-11-21  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpfileselection.[ch]: removed...

	* libgimpwidgets/gimpfileentry.[ch]: ...and added under a new name.

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimppatheditor.[ch]
	* app/widgets/gimppropwidgets.c
	* plug-ins/script-fu/script-fu-scripts.c: changed accordingly.

	* libgimp/gimpcompat.h: added compat #defines.

2003-11-21  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/tmpl/gimpfileselection.sgml: removed.

	* libgimpwidgets/tmpl/gimpfileentry.sgml: added.

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/tmpl/gimpdialog.sgml
	* libgimpwidgets/tmpl/gimppatheditor.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11544 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-11-21  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpfileselection.[ch]: removed...
+
+	* libgimpwidgets/gimpfileentry.[ch]: ...and added under a new name.
+
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgets.h
+	* libgimpwidgets/gimpwidgetstypes.h
+	* libgimpwidgets/gimppatheditor.[ch]
+	* app/widgets/gimppropwidgets.c
+	* plug-ins/script-fu/script-fu-scripts.c: changed accordingly.
+
+	* libgimp/gimpcompat.h: added compat #defines.
+
 2003-11-21  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: added a check for little cms.
