2003-11-21  Sven Neumann  <sven@gimp.org>
	* sk.po: reverted the last change since the new version had fatal
	errors and appeared truncated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11545 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* sk.po: reverted the last change since the new version had fatal
+	errors and appeared truncated.
+
 2003-11-21  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation by Zdenko Podobny.
