2003-11-21  Michael Natterer  <mitch@gimp.org>
	* modules/cdisplay_proof.c: GimpFileSelection -> GimpFileEntry,
	cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11546 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-21  Michael Natterer  <mitch@gimp.org>
 
+	* modules/cdisplay_proof.c: GimpFileSelection -> GimpFileEntry,
+	cleanup.
+
+2003-11-21  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpwidgets/gimpfileselection.[ch]: removed...
 
 	* libgimpwidgets/gimpfileentry.[ch]: ...and added under a new name.
