--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* modules/cdisplay_colorblind.c: 
+	* modules/cdisplay_gamma.c: 
+	* modules/cdisplay_high_contrast.c: minor cleanup.
+
 2003-11-21  Michael Natterer  <mitch@gimp.org>
 
 	* modules/cdisplay_proof.c: GimpFileSelection -> GimpFileEntry,
