2003-11-21  Jakub Steiner <jimmac@ximian.com>
* themes/Default/images/preferences/window-manager.png: use
  gnome2 icon for WM


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11548 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-21  Jakub Steiner <jimmac@ximian.com>
+
+	* themes/Default/images/preferences/window-manager.png: use
+	  gnome2 icon for WM
+
 2003-11-21  Sven Neumann  <sven@gimp.org>
 
 	* modules/cdisplay_colorblind.c: 
