2003-11-21  Sven Neumann  <sven@gimp.org>
	* configure.in: if lcms.h cannot be found, try lcms/lcms.h.

	* modules/cdisplay_proof.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11549 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: if lcms.h cannot be found, try lcms/lcms.h.
+
+	* modules/cdisplay_proof.c: changed accordingly.
+
 2003-11-21  Jakub Steiner <jimmac@ximian.com>
 
 	* themes/Default/images/preferences/window-manager.png: use
