--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-11-21  Henrik Brix Andersen  <brix@gimp.org>
+
+	* app/widgets/gimphelp-ids.h
+	* app/gui/preferences-dialog.c: changed "Window Manager" to
+	"Window Management" and "Decorations" to "Window Type Hints"
+
+	* themes/Default/images/preferences/window-manager.png: removed...
+
+	* themes/Default/images/preferences/Makefile.am
+	* themes/Default/images/preferences/window-management.png: ... and
+	added under a new name.
+
 2003-11-21  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: if lcms.h cannot be found, try lcms/lcms.h.
