--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-filter-dialog.c: create the Display
+	Filter dialog transient for the display shell and destroy it with
+	its parent.
+
 2003-11-21  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/widgets/gimphelp-ids.h
