--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-21  Sven Neumann  <sven@gimp.org>
+
+	* app/app-sections.txt: updated.
+
 2003-11-21  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/tmpl/gimpfileselection.sgml: removed.
